# aws-s3-pydantic

./: README.md  pyproject.toml
aws_s3_pydantic/: __init__.py  main.py
src/: __init__.py  main.py
tests/: test_s3_client.py
