[tool.poetry]
name = "aws-s3-utils"
version = "0.1.0"
description = "A Python project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.96"
pydantic = "^1.10.2"
pytest = "^7.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
